# rs-chess

./: .gitignore  Cargo.toml  README.md  architecture.drawio
api/: Cargo.toml
api/src/health/: mod.rs  services.rs
engine/: Cargo.toml
engine/src/: board.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/health/: handlers.rs  services.rs
server/src/tests/: health.rs  mod.rs  test_logger.rs
src/: main.rs
src/health/: errors.rs  filters.rs  handlers.rs  mod.rs  services.rs  types.rs
