[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "^0.14.27", features = ["full"] }
openssl = "^0.10.55"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "^1.0", features = ["full"] }
tokio-openssl = "^0.6.3"
tower = { version = "^0.4.13", features = ["full"] }
warp = { version = "^0.3.0", features = ["tls"] }
