[package]
name = "rs-chess-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.104"
time = "^0.3.25"
tokio = { version = "^1.0", features = ["full"] }
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["json", "local-time"] }
warp = { version = "^0.3.0", features = ["tls"] }
