[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.19"
log4rs = { version = "1.2.0", features = ["json_format"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "^1.0", features = ["full"] }
warp = { version = "^0.3.0", features = ["tls"] }
